fix: notification close icon alignment

--- a/src/Notification/Notification.scss
+++ b/src/Notification/Notification.scss
@@ -64,6 +64,10 @@
       border-radius: 50%;
       box-sizing: border-box;
       background: white;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       svg {
         width: 10px;
